[project]
name = "simple_customized_chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.17",
]

[project.scripts]
simple_customized_chatbot = "simple_customized_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
